# multiagent-stock-research

./: .coveragerc  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  sitecustomize.py
artifacts/AAPL/: AAPL_2025-11-06_report.md  AAPL_2025-11-09_report.md  AAPL_2025-11-12_report.md  AAPL_2025-11-14_report.md  AAPL_2025-12-23_report.md  AAPL_2026-01-18_report.md  AAPL_2026-01-25_report.md  AAPL_raw.json
artifacts/META/: META_2025-11-06_report.md  META_2025-11-07_report.md  META_2025-11-09_report.md  META_2025-11-12_report.md  META_2025-11-14_report.md  META_2026-01-18_report.md  META_2026-01-24_report.md  META_raw.json
artifacts/MSFT/: MSFT_2025-11-12_report.md  MSFT_2025-11-14_report.md  MSFT_2026-01-24_report.md  MSFT_2026-01-25_report.md  MSFT_raw.json
artifacts/TECHM.BO/: TECHM.BO_2025-11-04_report.md  TECHM.BO_2025-11-06_report.md  TECHM.BO_raw.json
artifacts/TSLA/: TSLA_2025-11-07_report.md  TSLA_2026-01-25_report.md  TSLA_raw.json
assets/: pdf_style.css
docs/: architecture.md
src/: api.py  cli.py
src/agents/: analyst_agent.py  compliance_agent.py  data_agent.py  supervisor_agent.py
src/config/: settings.yaml
src/graph/: orchestrator.py
src/guardrails/: inputs.py  outputs.py
src/tools/: fundamentals_tool.py  math_tool.py  news_tool.py  plot_tool.py  price_tool.py  storage_tool.py
tests/: conftest.py  test_analyst_agent.py  test_api.py  test_cli.py  test_compliance_agent.py  test_data_agent.py  test_graph.py  test_resilience.py  test_supervisor_agent.py  test_tools.py
(+19 files in other folders)
