[project]
name = "multiagent-stock-research"
version = "0.1.0"
description = "LangGraph multi-agent stock research (free-API, showcase-ready)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]


[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.12",
  "httpx>=0.27"  # for FastAPI TestClient transport
]
